at the middle of the middle one

--- a/app/styles/components/_components/_icons.scss
+++ b/app/styles/components/_components/_icons.scss
@@ -26,10 +26,10 @@
 }
 
 // Icons
-$icon-bullet: '\e001';
-.icon-bullet::before {
-  content:"\e001";
-}
+//$icon-bullet: '\e001';
+//.icon-bullet::before {
+//  content:"\e001";
+//}
 
 $icon-chevron-down: '\e002';
 .icon-chevron-down::before {
