--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,8 +23,8 @@ body {
 
 body {
   position: relative;
-  font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
-  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: lighter;
   background-color: #fff;
   box-sizing: border-box;
   min-height: 100%;
@@ -212,154 +212,8 @@ main {
 
 main {
   margin: 0 auto;
-  /* Height of the header */
-//  padding: 60px 16px 16px 16px;
-  min-height: 100%;
-}
-footer {
-  margin: 0 auto;
-  /* Height of the header */
-  padding: 60px 16px 16px 16px;
-}
-
-/** Larger Screens - desktops and tablets **/
-@media all and (min-width: 990px) {
-  .app-bar {
-    position: relative;
-  }
-  
-  .app-bar.open,
-  .app-bar.open ~ main {
-    -webkit-transform: translate(0px, 0);
-    transform: translate(0px, 0);
-  }
-  
-  .app-bar-container {
-    display: block;
-    height: 130px;
-    max-width: 864px;
-    padding: 0 16px;
-    box-sizing: border-box;
-    background-color: #4285f4;
-  }
-  
-  .app-bar .logo {
-    float: left;
-    margin: 0;
-    padding: 0;
-    line-height: 130px;
-    font-size: 46px;
-  }
-  
-  .app-bar-actions {
-    float: right;
-  }
-  
-  .app-bar::after {
-    content: ' ';
-    display: block;
-    height: 0;
-    overflow: hidden;
-    clear: both;
-  }
-  
-  button.menu {
-    display: none;
-  }
-  
-  .navdrawer-container {
-    position: relative;
-    width: 100%;
-    height: auto;
-    margin-top: 0;
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-    -webkit-transition: none;
-    transition: none;
-    overflow-y: auto;
-  }
-  
-  .navdrawer-container h4 {
-    display: none;
-  }
-  
-  .navdrawer-container ul {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    max-width: 864px;
-    margin: 0 auto;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  
-  .navdrawer-container ul li {
-    border: none;
-  }
-  
-  main {
-    max-width: 864px;
-    padding-top: 0;
-    min-height: initial;
-  }
-  main {
-    max-width: 864px;
-    padding-top: 0;
-    min-height: initial;
-  }
-  
-  body {
-    overflow-y: scroll;
-  }
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 300;
-  src: url(/fonts/RobotoCondensed-Light.eot);
-  src: local('Roboto Condensed Light'), local('RobotoCondensed-Light'), url(/fonts/RobotoCondensed-Light.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Light.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  src: url(/fonts/RobotoCondensed-Regular.eot);
-  src: local('Roboto Condensed Regular'), local('RobotoCondensed-Regular'), url(/fonts/RobotoCondensed-Regular.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Regular.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  src: url(/fonts/RobotoCondensed-Bold.eot);
-  src: local('Roboto Condensed Regular'), local('RobotoCondensed-Bold'), url(/fonts/RobotoCondensed-Bold.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Bold.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: italic;
-  font-weight: 300;
-  src: url(/fonts/RobotoCondensed-LightItalic.eot);
-  src: local('Roboto Condensed Light Italic'), local('RobotoCondensed-LightItalic'), url(/fonts/RobotoCondensed-LightItalic.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-LightItalic.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: italic;
-  font-weight: 400;
-  src: url(/fonts/RobotoCondensed-Italic.eot);
-  src: local('Roboto Condensed Italic'), local('RobotoCondensed-Italic'), url(/fonts/RobotoCondensed-Italic.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-Italic.woff) format('woff');
-}
-
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: italic;
-  font-weight: 700;
-  src: url(/fonts/RobotoCondensed-BoldItalic.eot);
-  src: local('Roboto Condensed Bold Italic'), local('RobotoCondensed-BoldItalic'), url(/fonts/RobotoCondensed-BoldItalic.eot) format('embedded-opentype'), url(/fonts/RobotoCondensed-BoldItalic.woff) format('woff');
+  margin-bottom: 3em;
+  clear: both;
 }
 
 .company-logo {
@@ -373,55 +227,63 @@ footer {
     opacity: 1;
     position: relative;
     z-index: 1;
+    margin: 15px 15px 15px 15px;
 }
 
 .top-area {
     width: 100%;
-    height: 137px; 
+    height: 170px; 
     float: left;
     position: relative;
     overflow: hidden;
-    
+    background: -webkit-linear-gradient(right, rgba(255,255,255,0.5), rgba(255,255,255,1)); 
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, rgba(255,255,255,0.5), rgba(255,255,255,1)); 
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, rgba(255,0,0,0.5), rgba(255,255,255,1)); 
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to left, rgba(255,255,255,0.5), rgba(255,255,255,1)); 
+    /* Standard syntax (must be last) */
 }
 
-.top-area:before {
-    background: white;
-    opacity: 0.5;
-    position: absolute;
-    content: '';
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
 
 .user-area{
-    width: 85px;
+    width: 110px;
     height:100%;
     float: right;
     position: relative;
     z-index: 1;
+    
     span{
+        padding-left: 10px;
         position: absolute;
         width: 100%;
         bottom: 0;
         left: 0;
         background-color: #185488;
+        color: #3492D8;
     }
-}
-
-.dropdown {
+    
+    .user-name {
+        color: white;
+    }
+    
+    .dropdown {
+    width: 18px;
     height: 10px;
-    width: 10px;
-    background-color: black;
     display: block;
     float: right;
     position: absolute;
     top: 0;
-    right: 0;
-    
+    right: 0;  
+    background-image: url("/images/site/arrow-down.png");
+    background-repeat: no-repeat;
+    margin: 10px 10px;
+    background-repeat: no-repeat;
+    }
 }
+
+
 
 .featured {
     background-image: url("/images/site/001_assets_M50.png");
@@ -430,14 +292,33 @@ footer {
     width: auto;
     background-size: cover;
     position: relative;
-    span{
+    text-align: center;
+        
+    span {
         height: 100px;
         width: 100%;
         position: absolute;
         bottom: 3px;
         left: 0;
-        background: white;
-        opacity: 0.75;
+        float: left;
+        padding-top: 20px;
+        text-align: left;
+        color: #00447D;
+        background: rgba(255,255,255,0.9);
+        padding-right: 40px;
+        
+    }
+    
+    b {
+        background-image: url("/images/site/001_assets_play%20button.png");
+        background-repeat: no-repeat;
+        width: 59px;
+        height: 59px;
+        display: block;
+        margin-right: 30px;
+        margin-left: 15px;
+        float: left;
+
     }
 }
 
@@ -446,26 +327,56 @@ footer {
   display: -ms-flexbox;
   display: block;
   width: 100%;
-  min-height: 300px;
+  min-height: 235px;
   position: relative;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
   margin: 0 auto;
   background-image: url("/images/site/001_assets_galaxy%20background.png");
-  background-repeat: no-repeat;    
+  background-repeat: no-repeat; 
+  background-position-y: -260px;
+  background-position-x: -200px;
+  clear: both;
 }
-sOlut10n$!
+
+.head-slogan {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    clear: both;
+    padding-top: 15px;
+    padding-bottom: 30px;
+    
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,1)); 
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,1)); 
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,1)); 
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,1)); 
+    /* Standard syntax (must be last) */
+}
 
 .article {
     padding-top: 3em;
+    padding-left: 1em;
+    padding-right: 1em;
     text-align: justify;
+    clear: both;
     h1 {
-        color: #FF931E
+        padding-left: 15px;
+        padding-right: 15px;
+        color: #FF9A2D
     }
+    
     h2 {
+        padding-left: 15px;
+        padding-right: 15px;
         padding-bottom: 1em;
+        font-size: 23px;
     }
+    
     .read-more {
         float: right;
         height: 21px;
@@ -473,14 +384,219 @@ sOlut10n$!
         display: block;
         background-image: url("/images/site/001_assets_read%20article%20prompt.png");
         background-repeat: no-repeat;
+        clear: both;
     }
+    
+    span {
+        margin-left: 15px;
+        margin-right: 15px;
+        display: block;
+    }
+    
     img {
         margin-left: auto;
         margin-right: auto;
         display: block;
-        width: 90%;
+        width: 100%;
     }
 
 }
 
+advertisements {
+  margin: 0 auto;
+  clear: both;
+  display: block;
+    img {
+        width: 300px;
+        margin-left: auto;
+        display: block;
+        margin-right: auto;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+}
 
+.small-navigation {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 50px;
+    clear: both;
+    font-weight: 600;
+    ul {
+        clear: both;
+        li {
+        float: left;
+        display: block;
+        font-size: 17px;
+        }
+    }
+    .selected {
+          text-decoration: underline;
+    }
+}
+
+.top-navigation {
+    position: absolute;
+    bottom: 47px;
+    left: 14em;
+    ul {
+     
+    }
+    li {
+        float: left;
+        display: block;
+        a {
+            color: #00447D;
+            font-weight: 600;
+        }
+    }
+}
+footer {
+  margin: 0 auto;
+    .footer-image {
+        background-image: url("/images/site/001_assets_MGU.png");
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 313px;
+        background-size: contain;
+        clear: both;
+    }
+    .footer-description {
+        
+        min-height: 250px;
+        background-color: #4372FF;
+        text-align: left;
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+        color: white;
+        
+        h1 {
+        padding-top: 1.5em;
+        font-size: 24px;
+        }
+        
+        h2 {
+            font-size: 18px;
+        }
+        
+        
+    }
+    .copyright {
+        min-height: 240px;
+        background-color: #999999;
+        padding-top: 40px;
+        span {
+            float: left;
+        }
+        
+        .c-text {
+            color: white;
+            margin-top: 15px;
+        }
+        
+        .logo {
+                background-image: url("/images/site/001_assets_DPLogo%20white.png");
+                background-repeat: no-repeat;
+                width: 137px;
+                height: 137px;
+                display: block;
+                margin-left: 20px;
+                margin-right: 20px;
+            }
+    }
+}
+
+/** Normal Screens - desktops and tablets **/
+@media all and (min-width: 800px) {
+    
+    
+  .small-navigation {
+    display: none;
+  }
+    
+  .top-navigation {
+    display: block;  
+    float: left;
+  }
+    
+  .featured span {
+      margin-left: 32px;
+      width: 61%;
+      font-size: 18px
+  }
+
+  main {
+//    max-width: 1024px;
+    padding-top: 0;
+//    min-height: initial;
+  }
+    
+    articles {
+        width: 100%;
+        padding-left: 1em;
+        padding-right: 1em;
+        display: block;
+    }
+    
+  .article {
+    clear: none;
+    width: 33%;
+    float: left;  
+    display: block;
+      h1 {
+        font-size: xx-large;
+        padding-left: 0.63em;
+        padding-right: 0.63em
+      }
+      h2 {
+        font-size: large;
+        padding-left: 0.63em;
+        padding-right: 0.63em
+      }
+      span {
+        font-size: normal;
+        margin-left: 0.63em;
+        margin-right: 0.63em;
+      }
+  }
+
+    body {
+        overflow-y: scroll;
+    }
+    
+    advertisements {
+        width: 100%;
+        overflow: hidden;
+        img {
+            width: auto;
+            height: 115px;
+        }
+    
+        .second-advert {
+            display: none;
+        }
+        
+        .first-advert {
+            float: left;
+        }
+        
+        .third-advert {
+            float:left; 
+        }
+    }
+    
+    .footer-description {
+    
+    }
+
+}
+
+@media all and (max-width:799px) {
+  .top-navigation {
+    display: none;  
+  }
+  .third-advert {
+    display: none;
+  }
+}
