--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3820,77 +3820,218 @@ footer {
       margin-left: 20px;
       margin-right: 20px; }
 
+/* line 509, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+.head-slogan-big {
+  display: none; }
+
 /** Normal Screens - desktops and tablets **/
 @media all and (min-width: 800px) {
-  /* line 514, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 517, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .small-navigation {
     display: none; }
-  /* line 518, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 521, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .top-navigation {
     display: block;
     float: left; }
-  /* line 523, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 526, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .featured span {
     margin-left: 32px;
     width: 61%;
     font-size: 18px; }
-  /* line 529, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 532, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   main {
     padding-top: 0; }
-  /* line 535, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 538, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   articles {
     width: 100%;
     padding-left: 1em;
     padding-right: 1em;
     display: block; }
-  /* line 542, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 545, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .article {
     clear: none;
     width: 33%;
     float: left;
     display: block; }
-    /* line 547, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 550, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     .article h1 {
       font-size: xx-large;
       padding-left: 0.63em;
       padding-right: 0.63em; }
-    /* line 552, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 555, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     .article h2 {
       font-size: large;
       padding-left: 0.63em;
       padding-right: 0.63em; }
-    /* line 557, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 560, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     .article span {
       font-size: normal;
       margin-left: 0.63em;
       margin-right: 0.63em; }
-  /* line 564, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 567, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   body {
     overflow-y: scroll; }
-  /* line 568, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 571, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   advertisements {
     width: 100%;
     overflow: hidden; }
-    /* line 571, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 574, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     advertisements img {
       width: auto;
       height: 115px; }
-    /* line 576, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 579, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     advertisements .second-advert {
       display: none; }
-    /* line 580, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 583, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     advertisements .first-advert {
       float: left; }
-    /* line 584, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    /* line 587, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
     advertisements .third-advert {
-      float: left; } }
+      float: left; }
+  /* line 592, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  footer .footer-image {
+    clear: none;
+    width: 369px;
+    height: 249px;
+    float: left;
+    object-fit: cover; }
+  /* line 600, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  footer .footer-description {
+    clear: none; }
+    /* line 603, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    footer .footer-description h1 {
+      padding-left: 15em; }
+    /* line 607, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    footer .footer-description h2 {
+      padding-left: 20em; } }
 
 @media all and (max-width: 799px) {
-  /* line 596, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 617, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .top-navigation {
     display: none; }
-  /* line 599, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  /* line 620, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
   .third-advert {
     display: none; } }
+
+@media all and (min-width: 1920px) {
+  /* line 627, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .head-slogan {
+    width: 435px;
+    height: 510px;
+    display: none; }
+  /* line 633, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .top-navigation {
+    left: 25em; }
+  /* line 637, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .app-bar-container {
+    height: 680px;
+    background-position-y: -340px;
+    background-position-x: 0; }
+  /* line 643, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .top-area {
+    height: 175px; }
+  /* line 648, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .head-slogan-big {
+    display: block;
+    float: left;
+    width: 435px;
+    height: 510px;
+    color: white;
+    font-size: 55px;
+    text-align: center;
+    clear: both;
+    padding-top: 110px;
+    padding-bottom: 110px;
+    padding-left: 38px;
+    padding-right: 38px;
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), #000000);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0.5), #000000);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), #000000);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), #000000);
+    /* Standard syntax (must be last) */ }
+  /* line 671, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .user-area {
+    width: 160px; }
+  /* line 675, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .user-expanded {
+    float: right;
+    background-color: rgba(0, 68, 125, 0.85);
+    height: 510px;
+    width: 160px; }
+  /* line 683, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .user-area span {
+    display: none; }
+  /* line 687, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .big-spaceship {
+    float: left;
+    width: 1325px;
+    height: 510px;
+    background-image: url("/images/site/001_assets_M50.png");
+    background-repeat: no-repeat;
+    background-size: cover; }
+  /* line 695, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  main {
+    display: none; }
+  /* line 699, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  articles {
+    float: right;
+    width: 1485px;
+    padding-left: 0px;
+    padding-right: 0px; }
+    /* line 700, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    articles .article {
+      padding-top: 1em; }
+  /* line 709, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  advertisements {
+    clear: none;
+    width: auto; }
+    /* line 713, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    advertisements .first-advert {
+      display: block;
+      float: none; }
+    /* line 719, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    advertisements .second-advert {
+      display: block;
+      float: none; }
+    /* line 724, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    advertisements .third-advert {
+      display: none; }
+    /* line 727, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    advertisements img {
+      width: auto;
+      height: auto;
+      margin-top: 0px;
+      margin-bottom: 0px; }
+  /* line 736, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  footer {
+    clear: both; }
+    /* line 740, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    footer .footer-image {
+      width: 620px;
+      height: 417px; }
+    /* line 745, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    footer .footer-description {
+      height: 417px;
+      margin-left: 17.5em; }
+      /* line 750, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+      footer .footer-description h1 {
+        font-size: 45px;
+        padding-left: 8em;
+        padding-right: 5em; }
+      /* line 756, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+      footer .footer-description h2 {
+        font-size: 31px;
+        padding-left: 11.75em; }
+    /* line 763, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+    footer .c-text {
+      font-size: 23px; }
+  /* line 768, D:/Responsive/responsive2/htmlcss/app/styles/main.scss */
+  .top-wrapper {
+    background-color: white;
+    width: 100%;
+    overflow: hidden; } }
 
 /*# sourceMappingURL=main.css.map */
