--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -336,7 +336,7 @@ main {
   background-image: url("/images/site/001_assets_galaxy%20background.png");
   background-repeat: no-repeat; 
   background-position-y: -260px;
-  background-position-x: -200px;
+  background-position-x: 0;
   clear: both;
 }
 
@@ -459,7 +459,7 @@ footer {
         background-repeat: no-repeat;
         width: 100%;
         height: 313px;
-        background-size: contain;
+        background-size: cover;
         clear: both;
     }
     .footer-description {
@@ -508,6 +508,10 @@ footer {
 }
 .head-slogan-big{
         display: none;
+}
+
+.selected {
+      text-decoration: underline;
 }
 
 /** Normal Screens - desktops and tablets **/
@@ -613,6 +617,13 @@ footer {
 
 }
 
+.user-expanded {
+    display: none;
+}
+.big-spaceship{
+    display: none;
+}
+
 @media all and (max-width:799px) {
   .top-navigation {
     display: none;  
@@ -640,15 +651,29 @@ footer {
         background-position-x: 0;
     }
     
+    .app-bar{
+        
+        &:after {
+            position: absolute;
+            top: 175px;
+            left: 0;
+            background: rgba(0, 0, 0, 0.69);
+            content: '';
+            width: 100%;
+            height: 510px;
+            z-index: 1;
+        }
+    }
+    
     .top-area {
         height: 175px;
-        
     }
+    
     
     .head-slogan-big {
         display: block;
         float: left;
-        width: 435px;
+        width: 22.65%;
         height: 510px;
         color: white;
         font-size: 55px;
@@ -673,10 +698,26 @@ footer {
         
     }
     .user-expanded {
+        display: block;
         float: right;
         background-color: rgba(0,68,125,0.85);
         height: 510px;
-        width: 160px;
+        width: 8.33%;
+         color: white;
+        
+        ul {
+            display: block;
+            text-align: justify;
+            clear: both;
+            overflow: hidden;
+            padding-left: 0px;
+            font-size: 15px;
+            font-weight: 500;
+        
+        }
+        li {
+            padding-bottom: 30px;
+        }
         
     }
     .user-area {
@@ -686,13 +727,43 @@ footer {
     }
     .big-spaceship {
         float: left;
-        width: 1325px;
+        width: 69%;
         height: 510px;
         background-image: url("/images/site/001_assets_M50.png");
     background-repeat: no-repeat;
         background-size: cover;
+        position: relative;
+        
+        span {
+            position: absolute;
+            height: 100px;
+            width: 75%;
+            bottom: 2px;
+            left: 2px;
+            float: left;
+            padding-top: 20px;
+            text-align: left;
+            color: #00447D;
+            background: rgba(255,255,255,0.9);
+            padding-right: 40px;
+            font-size: 32px;
+            font-weight: 500;
+        
+        }
+    
+        b {
+            background-image: url("/images/site/001_assets_play%20button.png");
+            background-repeat: no-repeat;
+            width: 59px;
+            height: 59px;
+            display: block;
+            margin-right: 30px;
+            margin-left: 15px;
+            float: left;
+
+        }
     }
-    main {
+    .featured {
     display: none;
     }
     
@@ -765,11 +836,70 @@ footer {
         }
     }
     
-    .top-wrapper {
+    .container-wrapper {
         background-color: white;
+        
+    }
+    
+    .containter-wrapper::after {
+        background-color: black;
+        height: 200px;
         width: 100%;
+    }
+    
+    .app-bar-container {
+        max-width: 1920px;
+    }
+    
+    .app-bar {
+        background-color: white;
+    }
+    
+    .base, p, ul, ol {
+        font-size: 27px;
+    }
+    
+    ul li {
+        padding-left: 30px;
+  padding-right: 30px;
+    }
+    
+    main {
+        max-width: 1920px;
+    }
+    footer {
+        max-width: 1920px;
+    }
+    footwrapper {
+        background-color: #E6E6E6;
+        width: 100%;
+        display: block;
         overflow: hidden;
     }
+    
+    .article {
+        float: right;
+        padding-right: 0;
+        padding-left: 2em;
+        
+        h1 {
+            padding-left: 0.3em;
+        }
+    }
+    main {
+        margin-bottom: 0px;
+    }
+    
+    .head-items {
+        z-index: 1000;
+    }
+    
+    .app-bar-container {
+        z-index: 100;
+    }
+    
+    
+    
     
     
 }
