--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -726,6 +726,7 @@ footer {
         }
     }
     .big-spaceship {
+        display: block;
         float: left;
         width: 69%;
         height: 510px;
